2007-01-18  Anton Nikishaev  <anton.nik@gmail.com>

	* wcsmbs/wchar.h (wcstoll): Fix comment, function returns value of
	type `long long int', not `long int'.
	(wcstoq): Likewise.

2007-01-18  Ulrich Drepper  <drepper@redhat.com>

	* scripts/gen-as-const.awk: Add cast to long to avoid int promotion
	of values on 64-bit platforms which are too large.

2007-01-12  Steven Munroe  <sjmunroe@us.ibm.com>
	    Joe Kerian  <jkerian@us.us.ibm.com>

	[BZ #2749]
	* sysdeps/ieee754/ldbl-128ibm/s_copysignl.c: Include
	<math_ldbl_opt.h>.  Remove weak_alias.  Use long_double_symbol macro.
	(__copysignl): Use signbit() for comparison.
	* sysdeps/ieee754/ldbl-128ibm/s_fabsl.c (__fabsl): Correct parms for
	SET_LDOUBLE_WORDS64.

	[BZ #2423, #2749]
	* sysdeps/ieee754/ldbl-128ibm/s_ceill.c: Don't include <fenv_libc.h>.
	(__ceill): Remove calls to fegetround(), fesetround().
	* sysdeps/ieee754/ldbl-128ibm/s_floorl.c: Likewise.
	* sysdeps/ieee754/ldbl-128ibm/s_roundl.c: Likewise.
	* sysdeps/ieee754/ldbl-128ibm/s_truncl.c: Likewise.

2007-01-17  Jakub Jelinek  <jakub@redhat.com>

	* nscd/nscd_getserv_r.c (nscd_getserv_r): Fix pastos.

	* sysdeps/unix/sysv/linux/getdents.c (offsetof): Remove.

2007-01-17  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/fatal-prepare.h: Use PTHFCT_CALL to
	demangle pointer.
	* csu/libc-start.c: Likewise.

2007-01-16  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/posix/system.c: Remove NO_WAITPID support, it cannot
	really work anyway.

2007-01-15  Ulrich Drepper  <drepper@redhat.com>

	* nscd/connections.c (servinfo): Renamed to reqinfo.  Change all
	users.
	(handle_request): Remove unnecessary tests.

	* nscd/cache.c (cache_add): Record the failure to add to the cache.

2007-01-15  Jakub Jelinek  <jakub@redhat.com>

	* soft-fp/op-common.h (FP_TRUNC): When truncating a NaN, clear
	workbits in semi-raw fraction.

	* math/test-misc.c: Add new tests.

2007-01-14  Steven Munroe  <sjmunroe@us.ibm.com>
