@@ -1,5 +1,5 @@
 # Available tests for iconv(1) (and therefore iconv(3)) in GNU libc.
-# Copyright (C) 1998-2002, 2005 Free Software Foundation, Inc.
+# Copyright (C) 1998-2002, 2005, 2007 Free Software Foundation, Inc.
 # This file is part of the GNU C Library.
 # Contributed by Ulrich Drepper <drepper@cygnus.com>, 1998.
 #
@@ -166,3 +166,4 @@ IBM1390			IBM1390			N	UTF8
 IBM1399			IBM1399			N	UTF8
 ISO_11548-1		ISO_11548-1		-	UTF8
 MIK			MIK			Y	UTF8
+BRF			BRF			-	UTF8
