@@ -1,0 +1,108 @@
+<code_set_name> BRF
+<comment_char> %
+<escape_char> /
+% version: 1.0
+%  source: Samuel Thibault <samuel.thibault@ens-lyon.org>
+
+CHARMAP
+<U0000>     /x00         NULL (NUL)
+<U0001>     /x01         START OF HEADING (SOH)
+<U0002>     /x02         START OF TEXT (STX)
+<U0003>     /x03         END OF TEXT (ETX)
+<U0004>     /x04         END OF TRANSMISSION (EOT)
+<U0005>     /x05         ENQUIRY (ENQ)
+<U0006>     /x06         ACKNOWLEDGE (ACK)
+<U0007>     /x07         BELL (BEL)
+<U0008>     /x08         BACKSPACE (BS)
+<U0009>     /x09         CHARACTER TABULATION (HT)
+<U000A>     /x0a         LINE FEED (LF)
+<U000B>     /x0b         LINE TABULATION (VT)
+<U000C>     /x0c         FORM FEED (FF)
+<U000D>     /x0d         CARRIAGE RETURN (CR)
+<U000E>     /x0e         SHIFT OUT (SO)
+<U000F>     /x0f         SHIFT IN (SI)
+<U0010>     /x10         DATALINK ESCAPE (DLE)
+<U0011>     /x11         DEVICE CONTROL ONE (DC1)
+<U0012>     /x12         DEVICE CONTROL TWO (DC2)
+<U0013>     /x13         DEVICE CONTROL THREE (DC3)
+<U0014>     /x14         DEVICE CONTROL FOUR (DC4)
+<U0015>     /x15         NEGATIVE ACKNOWLEDGE (NAK)
+<U0016>     /x16         SYNCHRONOUS IDLE (SYN)
+<U0017>     /x17         END OF TRANSMISSION BLOCK (ETB)
+<U0018>     /x18         CANCEL (CAN)
+<U0019>     /x19         END OF MEDIUM (EM)
+<U001A>     /x1a         SUBSTITUTE (SUB)
+<U001B>     /x1b         ESCAPE (ESC)
+<U001C>     /x1c         FILE SEPARATOR (IS4)
+<U001D>     /x1d         GROUP SEPARATOR (IS3)
+<U001E>     /x1e         RECORD SEPARATOR (IS2)
+<U001F>     /x1f         UNIT SEPARATOR (IS1)
+<U2800>     /x20         BRAILLE PATTERN BLANK
+<U282E>     /x21         BRAILLE PATTERN DOTS-2346
+<U2810>     /x22         BRAILLE PATTERN DOTS-5
+<U283C>     /x23         BRAILLE PATTERN DOTS-3456
+<U282B>     /x24         BRAILLE PATTERN DOTS-1246
+<U2829>     /x25         BRAILLE PATTERN DOTS-146
+<U282F>     /x26         BRAILLE PATTERN DOTS-12346
+<U2804>     /x27         BRAILLE PATTERN DOTS-3
+<U2837>     /x28         BRAILLE PATTERN DOTS-12356
+<U283E>     /x29         BRAILLE PATTERN DOTS-23456
+<U2821>     /x2a         BRAILLE PATTERN DOTS-16
+<U282C>     /x2b         BRAILLE PATTERN DOTS-346
+<U2820>     /x2c         BRAILLE PATTERN DOTS-6
+<U2824>     /x2d         BRAILLE PATTERN DOTS-36
+<U2828>     /x2e         BRAILLE PATTERN DOTS-46
+<U280C>     /x2f         BRAILLE PATTERN DOTS-34
+<U2834>     /x30         BRAILLE PATTERN DOTS-356
+<U2802>     /x31         BRAILLE PATTERN DOTS-2
+<U2806>     /x32         BRAILLE PATTERN DOTS-23
+<U2812>     /x33         BRAILLE PATTERN DOTS-25
+<U2832>     /x34         BRAILLE PATTERN DOTS-256
+<U2822>     /x35         BRAILLE PATTERN DOTS-26
+<U2816>     /x36         BRAILLE PATTERN DOTS-235
+<U2836>     /x37         BRAILLE PATTERN DOTS-2356
+<U2826>     /x38         BRAILLE PATTERN DOTS-236
+<U2814>     /x39         BRAILLE PATTERN DOTS-35
+<U2831>     /x3a         BRAILLE PATTERN DOTS-156
+<U2830>     /x3b         BRAILLE PATTERN DOTS-56
+<U2823>     /x3c         BRAILLE PATTERN DOTS-126
+<U283F>     /x3d         BRAILLE PATTERN DOTS-123456
+<U281C>     /x3e         BRAILLE PATTERN DOTS-345
+<U2839>     /x3f         BRAILLE PATTERN DOTS-1456
+<U2808>     /x40         BRAILLE PATTERN DOTS-4
+<U2801>     /x41         BRAILLE PATTERN DOTS-1
+<U2803>     /x42         BRAILLE PATTERN DOTS-12
+<U2809>     /x43         BRAILLE PATTERN DOTS-14
+<U2819>     /x44         BRAILLE PATTERN DOTS-145
+<U2811>     /x45         BRAILLE PATTERN DOTS-15
+<U280B>     /x46         BRAILLE PATTERN DOTS-124
+<U281B>     /x47         BRAILLE PATTERN DOTS-1245
+<U2813>     /x48         BRAILLE PATTERN DOTS-125
+<U280A>     /x49         BRAILLE PATTERN DOTS-24
+<U281A>     /x4a         BRAILLE PATTERN DOTS-245
+<U2805>     /x4b         BRAILLE PATTERN DOTS-13
+<U2807>     /x4c         BRAILLE PATTERN DOTS-123
+<U280D>     /x4d         BRAILLE PATTERN DOTS-134
+<U281D>     /x4e         BRAILLE PATTERN DOTS-1345
+<U2815>     /x4f         BRAILLE PATTERN DOTS-135
+<U280F>     /x50         BRAILLE PATTERN DOTS-1234
+<U281F>     /x51         BRAILLE PATTERN DOTS-12345
+<U2817>     /x52         BRAILLE PATTERN DOTS-1235
+<U280E>     /x53         BRAILLE PATTERN DOTS-234
+<U281E>     /x54         BRAILLE PATTERN DOTS-2345
+<U2825>     /x55         BRAILLE PATTERN DOTS-136
+<U2827>     /x56         BRAILLE PATTERN DOTS-1236
+<U283A>     /x57         BRAILLE PATTERN DOTS-2456
+<U282D>     /x58         BRAILLE PATTERN DOTS-1346
+<U283D>     /x59         BRAILLE PATTERN DOTS-13456
+<U2835>     /x5a         BRAILLE PATTERN DOTS-1356
+<U282A>     /x5b         BRAILLE PATTERN DOTS-246
+<U2833>     /x5c         BRAILLE PATTERN DOTS-1256
+<U283B>     /x5d         BRAILLE PATTERN DOTS-12456
+<U2818>     /x5e         BRAILLE PATTERN DOTS-45
+<U2838>     /x5f         BRAILLE PATTERN DOTS-456
+END CHARMAP
+
+WIDTH
+<U2800>...<U283F>	1
+END WIDTH
